@@ -1,13 +1,0 @@
-  noalt-tokens
-  nodebug
-  noeast-const
-  noecho-commands
-    english-types
-  noexplain-by-default
-    explicit-ecsu=su
-    explicit-int=u
-  nographs
-    lang=C23
-    prompt
-    semicolon
-    using
