@@ -1,5 +1,0 @@
-EXPECTED_EXIT=0
-cdecl <<END
-set explicit-int=u
-set
-END
